examples/test/testpolicy14682.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14682
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key1: value0
      key31: value2
      key38: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value26
          key42: value0
          key30: value43
      podSelector:
        matchLabels:
          key46: value29
